# chaos

./: .gitignore  CMakeLists.txt  README.md  cdf_attrs.c  cdf_attrs.h  cdf_utils.c  cdf_utils.h  cdf_vars.c  cdf_vars.h  chaos.c  chaos_calc.c  chaos_settings.h  export_products.c  export_products.h  model.c  model.h  run.sh  shc.c  shc.h  themis_asi_fieldlines.c  trace.c  trace.h  tracechaos.c  util.c  util.h
D/: Dockerfile
Docker/: Dockerfile  docker-build.sh
Mathematica/: CHAOS_7_cdf.nb  CHAOS_7_compare_residuals_from_different_version.nb  CHAOS_7_compare_residuals_from_different_versions.nb  InterpolationAnalysis.nb  Magnetic_vector_from_potential.nb  ProcessingTimeEstimate.nb
docker/: Dockerfile  Makefile.cdf380.docker
shc/: CHAOS-7.12_static.shc  CHAOS-7.9_static.shc
shc/7.10/: CHAOS-7.10_core.shc  CHAOS-7.10_core_extrapolated.shc  CHAOS-7.10_static.shc
shc/7.11/: CHAOS-7.11_core.shc  CHAOS-7.11_core_extrapolated.shc  CHAOS-7.11_static.shc
shc/7.12/: CHAOS-7.12_core_extrapolated.shc
